# EulerianSpray

./: .gitignore  CMakeLists.txt  LICENSE  README.md
inc/: EulerianSprayOperator.h  EulerianSprayOperator.hpp  EulerianSprayOperator_IMP.h  EulerianSprayOperator_IMP.hpp  EulerianSprayProblem.h  EulerianSprayProblem.hpp  EulerianSprayProblem_IMP.hpp  FindIntersection.hpp  FindIntersection_IMP.hpp  Functions.h  Functions.hpp  Functions_IMP.hpp  InitialSolution.h  InlinedFunctions.h  InlinedFunctions.hpp  InlinedOperations.hpp  Parameters.h  Parameters.hpp  RungeKuttaIntegrator.h  RungeKuttaIntegrator.hpp  RungeKuttaIntegrator_IMP.hpp  TypesDefinition.h  TypesDefinition.hpp  draft.txt
input/: Accuracy1d.prm  AnularDelta2d.prm  CrossVacuum2d.prm  DeltaShock1d.prm  DiffusivityTest2d.prm  OriginCrossingDelta2d.prm  OriginDelta2d.prm  OriginRadialDelta2d.prm  Vacuum1d.prm  VacuumCloseUp1d.prm  accuracy.prm  deltaShock1d.prm  diffusivityTest2d.prm  input_1.prm  input_deltaShock1d.prm  input_test.prm  input_vacuum.prm  vacuum1d.prm
myresults/Test2/Degree1/SSP3-Godunov/: final_solution.vtu  solution_000.vtu  solution_001.vtu  solution_002.vtu  solution_003.vtu  solution_004.vtu  solution_005.vtu  solution_006.vtu  solution_007.vtu  solution_008.vtu  solution_009.vtu  solution_010.vtu  solution_011.vtu  solution_012.vtu  solution_013.vtu  solution_014.vtu  solution_015.vtu  solution_016.vtu  solution_017.vtu  solution_018.vtu  solution_019.vtu  solution_020.vtu  (+29 more)
src/: EulerianSprayOperator.cpp  EulerianSprayProblem.cpp  Functions.cpp  InitialSolution.cpp  Parameters.cpp  RungeKuttaIntegrator.cpp  main.cpp
(+402 files in other folders)
